# skill-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  clean_db.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_server.sh
.github/workflows/: claude.yml  deploy.yml
alembic/: env.py
alembic/versions/: f2a52438efd7_add_status_field_to_assistants.py
backend/: .dockerignore  Dockerfile  requirements.txt
backend/migrations/: 005_add_features_scenarios_sort_to_skills.sql  006_add_categories_array_to_skills.sql  011_update_categories_unique_constraint.sql  014_add_sort_order_to_assistants.sql  015_add_source_url_to_assistants.sql  019_add_status_to_assistants.sql
backend/test/: test_database.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  forms.ts  main.tsx  styles.css  types.ts
migrations/: 001_create_skills_table.sql  002_create_skill_versions_table.sql  003_create_categories_table.sql  004_add_icon_and_category_id_to_skills.sql  007_add_icon_url_to_categories.sql  008_add_status_to_skills.sql  009_add_tenant_id_to_skills.sql  010_add_type_to_categories.sql  012_create_assistants_table.sql  013_add_tenant_id_to_assistants.sql  016_add_skills_array_to_assistants.sql  017_add_categories_array_to_assistants.sql  018_drop_category_id_from_assistants.sql
skill_hub/: __init__.py
skill_hub/api/: auth.py  exceptions.py
skill_hub/config/: __init__.py  config.py
skill_hub/db/: __init__.py  database.py
skill_hub/models/: __init__.py  assistant.py  category.py  skill.py  skill_version.py
skill_hub/routes/: assistants.py  auth.py  categories.py  health.py  routes.py  skill_versions.py  skills.py
skill_hub/schemas/: assistant_schemas.py  category_schemas.py  skill_schemas.py
skill_hub/server/: __init__.py  app.py  server.py
(+20 files in other folders)
